--- a/example/Makefile
+++ b/example/Makefile
@@ -9,8 +9,10 @@ ifeq ($(FF_DPDK),)
 endif
 
 LIBS+= -L${FF_PATH}/lib -L${FF_DPDK}/lib -Wl,--whole-archive,-lfstack,--no-whole-archive
-LIBS+= -Wl,--whole-archive -lrte_pmd_vmxnet3_uio -lrte_pmd_i40e -lrte_pmd_ixgbe -lrte_pmd_e1000 -lrte_pmd_ring
-LIBS+= -Wl,--whole-archive -lrte_hash -lrte_kvargs -Wl,-lrte_mbuf -lethdev -lrte_eal -Wl,-lrte_mempool
+LIBS+= -Wl,--whole-archive -lrte_pmd_ena -lrte_pmd_ring
+LIBS+= -Wl,--whole-archive -lrte_hash -lrte_kvargs 
+LIBS+= -Wl,-lrte_mbuf -lrte_ethdev -lrte_net -lrte_eal 
+LIBS+= -Wl,-lrte_mempool -lrte_mempool_ring -lrte_mempool_stack
 LIBS+= -lrte_ring -lrte_cmdline -lrte_cfgfile -lrte_kni -lrte_timer -Wl,-lrte_pmd_virtio
 LIBS+= -Wl,--no-whole-archive -lrt -lm -ldl -lcrypto -pthread
 
